# MBKS_discretionary-access-control

./: .gitignore  README.md
back/: pyproject.toml  requirements.txt
back/alembic/: env.py
back/alembic/versions/: 064bd9c1033d_.py  0fd2926d6a17_.py  55c5d29f1fe2_.py  6919ab9a3841_.py  a528c278fe60_.py
back/cert/: jwt-private.pem  jwt-public.pem
back/src/: config.py  main.py
back/src/admins/: __init__.py  repository.py  services.py
back/src/auth/: dependencies.py  routes.py  schemas.py  services.py  utils.py
back/src/database/: __init__.py  db_helper.py
back/src/database/models/: __init__.py  admins.py  discretionary_access.py  files.py  users.py
back/src/discretionary_access/: __init__.py  repository.py  schemas.py  services.py
back/src/files/: __init__.py  dependepcies.py  repository.py  routes.py  schemas.py  services.py
back/src/repositories/: __init__.py  repository.py
back/src/users/: __init__.py  repository.py  routes.py  schemas.py  services.py
back/src/utils/: __init__.py  dependecies.py  uow.py
front/: package-lock.json  package.json
front/src/: App.vue
front/src/api/: index.js
front/src/components/: FileInfo.vue  FileMod.vue  FilesList.vue  Header.vue  SignInForm.vue  SignUpForm.vue  UsersPermissions.vue
front/src/router/: index.js
front/src/stores/: auth.js
front/src/views/: ProfileView.vue  SignInView.vue  SignUpView.vue  UsersPermissionsView.vue
